Corrección de documentos y directorios

--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Introducción a la Programación by Maxi Programa</title>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <h1>Ejercicios de Introducción a la Programación</h1>
+    <div>
+      <span
+        >Ésta es una pequeña y simple página de los ejercicios del
+        <a href="https://campusmaxiprograma.com/course/view.php?id=2&section=0"
+          >curso</a
+        >
+        <b>GRATIS</b> Creado por Maxi Programa</span
+      >
+    </div>
+    <hr />
     <!-- Contenedor para mostrar los resultados -->
     <div id="resultados"></div>
 
