Finalizando tarea 3 de ejercicios1

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <div id="resultados"></div>
 
     <!-- Tus scripts JavaScript -->
-    <script src="ejercicios1.js"></script>
-    <script src="ejercicios2.js"></script>
-    <script src="ejercicios3.js"></script>
-    <script src="ejercicios4.js"></script>
-    <script src="ejercicios5.js"></script>
-    <script src="ejercicios6.js"></script>
-    <script src="ejercicios7.js"></script>
+    <script defer src="js/ejercicios1.js"></script>
+    <script defer src="js/ejercicios2.js"></script>
+    <script defer src="js/ejercicios3.js"></script>
+    <script defer src="js/ejercicios4.js"></script>
+    <script defer src="js/ejercicios5.js"></script>
+    <script defer src="js/ejercicios6.js"></script>
+    <script defer src="js/ejercicios7.js"></script>
     <!-- ... otros scripts ... -->
   </body>
 </html>
