Finalizando tarea5 de ejercicios1 y documentación

--- a/index.html
+++ b/index.html
@@ -9,26 +9,27 @@
   <body>
     <h1>Ejercicios de Introducción a la Programación</h1>
     <div>
-      <span
-        >Ésta es una pequeña y simple página de los ejercicios del
-        <a href="https://campusmaxiprograma.com/course/view.php?id=2&section=0"
+      <p></p>
+        Ésta es una pequeña y simple página de los ejercicios del
+        <a href="https://campusmaxiprograma.com/course/view.php?id=2&section=0" target="_blank"
           >curso</a
         >
-        <b>GRATIS</b> Creado por Maxi Programa</span
-      >
+        <b>GRATIS</b> Creado por Maxi Programa. Estoy aprendiendo JavaScript y decidí practicarlo con éste curso (De a poco voy a ir aprendiendo buenas practicas e ir aplicándolas).
+      </p>
     </div>
     <hr />
     <!-- Contenedor para mostrar los resultados -->
     <div id="resultados"></div>
 
     <!-- Tus scripts JavaScript -->
-    <script defer src="js/ejercicios1.js"></script>
-    <script defer src="js/ejercicios2.js"></script>
-    <script defer src="js/ejercicios3.js"></script>
-    <script defer src="js/ejercicios4.js"></script>
-    <script defer src="js/ejercicios5.js"></script>
-    <script defer src="js/ejercicios6.js"></script>
-    <script defer src="js/ejercicios7.js"></script>
+    <script src="js/ejercicios1.js"></script>
+    <script src="js/ejercicios2.js"></script>
+    <script src="js/ejercicios3.js"></script>
+    <script src="js/ejercicios4.js"></script>
+    <script src="js/ejercicios5.js"></script>
+    <script src="js/ejercicios6.js"></script>
+    <script src="js/ejercicios7.js"></script>
     <!-- ... otros scripts ... -->
   </body>
+  <footer></footer>
 </html>
