Agregando selectores dinamicos de ejercicios.

--- a/index.html
+++ b/index.html
@@ -18,18 +18,13 @@
       </p>
     </div>
     <hr />
-    <!-- Contenedor para mostrar los resultados -->
+    <label for="numeroEjercicio">Ingresa el número de ejercicio:</label>
+    <input type="text" id="numeroEjercicio">
+    <button onclick="ejecutarEjercicio()">Ejecutar</button>
+    <button onclick="borrarResultado()">Borrar resultado</button>
     <div id="resultados"></div>
 
-    <!-- Tus scripts JavaScript -->
-    <script src="js/ejercicios1.js"></script>
-    <script src="js/ejercicios2.js"></script>
-    <script src="js/ejercicios3.js"></script>
-    <script src="js/ejercicios4.js"></script>
-    <script src="js/ejercicios5.js"></script>
-    <script src="js/ejercicios6.js"></script>
-    <script src="js/ejercicios7.js"></script>
-    <!-- ... otros scripts ... -->
+    <script src="js/ejercicios.js"></script>
   </body>
   <footer></footer>
 </html>
